Updated Plugins Section

--- a/app.json
+++ b/app.json
@@ -25,7 +25,12 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-font"
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow EV Charging App to use your location."
+        }
+      ]
     ]
   }
 }
