--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.17",
     "expo": "~51.0.8",
     "expo-font": "~12.0.5",
+    "expo-location": "~17.0.1",
     "expo-network": "~6.0.1",
     "expo-secure-store": "^13.0.1",
     "expo-splash-screen": "~0.27.4",
@@ -22,6 +23,7 @@
     "expo-web-browser": "~13.0.3",
     "react": "^18.2.0",
     "react-native": "0.74.1",
+    "react-native-maps": "^1.15.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1"
   },
