--- a/app.json
+++ b/app.json
@@ -19,7 +19,12 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
+      ],
+      "package": "com.energey.ev"
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -31,6 +36,30 @@
           "locationAlwaysAndWhenInUsePermission": "Allow EV Charging App to use your location."
         }
       ]
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "d0b50ed4-9614-46dc-a4d3-6fc0cadec941",
+        "build": {
+          "preview": {
+            "android": {
+              "buildType": "apk"
+            }
+          },
+          "preview2": {
+            "android": {
+              "gradleCommand": ":app:assembleRelease"
+            }
+          },
+          "preview3": {
+            "developmentClient": true
+          },
+          "preview4": {
+            "distribution": "internal"
+          },
+          "production": {}
+        }
+      }
+    }
   }
 }
