--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@clerk/clerk-expo": "^1.1.7",
+    "@clerk/clerk-expo": "^0.19.22",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
-    "expo": "~51.0.8",
-    "expo-font": "~12.0.5",
+    "expo": "~51.0.9",
+    "expo-font": "~12.0.6",
     "expo-location": "~17.0.1",
     "expo-network": "~6.0.1",
     "expo-secure-store": "^13.0.1",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "~13.0.3",
-    "react": "^18.2.0",
+    "react": "18.2.0",
     "react-native": "0.74.1",
-    "react-native-maps": "^1.14.0",
+    "react-native-maps": "1.14.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1"
   },
