Application Icons Updated

--- a/app.json
+++ b/app.json
@@ -5,10 +5,10 @@
     "scheme": "evcharging",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/images/marker.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/images/ev-charging.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -17,7 +17,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/images/marker.png",
         "backgroundColor": "#ffffff"
       },
       "permissions": [
@@ -27,7 +27,7 @@
       "package": "com.energey.ev"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/images/car-marker.png"
     },
     "plugins": [
       [
